z-index fix 2

--- a/src/components/apps/Header/_Header.scss
+++ b/src/components/apps/Header/_Header.scss
@@ -7,7 +7,7 @@ header {
   width: 100%;
   max-width: 100vw;
   padding: 13px 50px;
-  z-index: 999;
+  z-index: 998;
 
   @include tablet {
     background-color: $color-background;
