--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -41,7 +41,7 @@ header {
   width: 100%;
   max-width: 100vw;
   padding: 13px 50px;
-  z-index: 999;
+  z-index: 998;
   /* Title */
   /* Nav */
 }
